--- a/src/dms/datasets/templates/datasets/resource_detail_base.html
+++ b/src/dms/datasets/templates/datasets/resource_detail_base.html
@@ -53,7 +53,7 @@
 <p class="mt-2">Access type: <em>{{ object.access_type }}</em></p>
 
 <c-accordion type='multiple'
-    open="{'meta': true, 'preview': false, 'schema': true, 'snippets': true, 'map': true, 'data': true, 'desc': true, 'user-meta': true}" class="mt-4">
+    open="{% block accordion_state %}{'meta': true, 'preview': false, 'schema': true, 'snippets': true, 'map': true, 'data': true, 'desc': true, 'user-meta': true}{% endblock %}" class="mt-4">
     {% if object.extent %}
     <c-accordion.item value='desc'>
         <c-accordion.trigger value='desc' class="text-2xl font-bold">Description</c-accordion.trigger>
