--- a/src/dms/datasets/templates/datasets/resource_detail_base.html
+++ b/src/dms/datasets/templates/datasets/resource_detail_base.html
@@ -42,7 +42,7 @@
         {% endif %}
         {% has_perm 'datasets.delete_resource' user object as can_delete %}
         {% if can_delete %}
-        <a class="btn btn-error text-error-content"
+        <a class="btn btn-error"
             href="{% url 'datasets:resource_delete' dataset_pk=object.dataset_id pk=object.pk %}">Delete</a>
         {% endif %}
     </div>
